# xshell

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bors.toml
.github/workflows/: ci.yaml
cbench/baseline/: Cargo.toml
cbench/baseline/src/: main.rs
cbench/ducted/src/: main.rs
cbench/xshelled/: Cargo.toml
cbench/xshelled/src/: main.rs
examples/: async_timeout.rs  ci.rs  clone_and_publish.rs  timeout.rs
mock_bin/: date.rs  echo.rs  echo_env.rs  echoboth  echoboth.rs  xecho.rs
src/: async_ext.rs  env.rs  error.rs  exec.rs  exec3.rs  fs.rs  gsl.rs  lib.rs
tests/: cmd_env.rs  compile_time.rs  it.rs  windows.rs  x.rs
tests/data/: stdin_is_terminal.rs  xecho.rs  xsleep.rs
tests/data/baseline/: Cargo.toml
tests/data/baseline/src/: main.rs
tests/data/ducted/: Cargo.toml
tests/data/ducted/src/: main.rs
tests/data/stdin_is_terminal/: Cargo.toml
tests/data/stdin_is_terminal/src/: main.rs
tests/data/xshelled/: Cargo.toml
tests/data/xshelled/src/: main.rs
tests/it/: async_ext.rs  compile_failures.rs  env.rs  main.rs  tidy.rs  timeout.rs
xshell-macros/: Cargo.toml
xshell-macros/src/: lib.rs
