[package]
name = "xshell"
description = "Utilities for quick shell scripting in Rust"
categories = ["development-tools::build-utils", "filesystem"]
version = "0.2.6"                                             # also update xshell-macros/Cargo.toml and CHANGELOG.md
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/xshell"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2021"
rust-version = "1.63"

exclude = [".github/", "bors.toml", "rustfmt.toml", "cbench", "mock_bin/"]

[features]
async = ["tokio"]

[workspace]

[dependencies]
xshell-macros = { version = "=0.2.6", path = "./xshell-macros" }
tokio = { version = "1.38.0", features = [
  "process",
  "io-std",
  "io-util",
  "rt",
], optional = true }

[dev-dependencies]
anyhow = "1.0.56"
tokio = { version = "1.38.0", features = ["full"] }

[[example]]
name = "async_timeout"
required-features = ["async"]
