[package]
name = "xshell"
description = "Utilities for quick shell scripting in Rust"
categories = ["development-tools::build-utils", "filesystem"]
version = "0.2.7" # also update xshell-macros/Cargo.toml and CHANGELOG.md
license = "MIT OR Apache-2.0"
repository = "https://github.com/matklad/xshell"
authors = ["Alex Kladov <aleksey.kladov@gmail.com>"]
edition = "2021"
rust-version = "1.63"

exclude = [".github/", "bors.toml", "rustfmt.toml", "cbench", "mock_bin/"]

[workspace]

[dependencies]
xshell-macros = { version = "=0.2.7", path = "./xshell-macros" }

[dev-dependencies]
anyhow = "1.0.56"
